# vtol-digital-twin

./: README.md
install/: local_setup.sh  setup.sh
install/vtol_control/share/vtol_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_control/share/vtol_control/cmake/: vtol_controlConfig.cmake
install/vtol_description/share/vtol_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_description/share/vtol_description/cmake/: vtol_descriptionConfig.cmake
install/vtol_estimation/share/vtol_estimation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_estimation/share/vtol_estimation/cmake/: vtol_estimationConfig.cmake
install/vtol_simulation/share/vtol_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vtol_simulation/share/vtol_simulation/cmake/: vtol_simulationConfig.cmake
log/: latest_build
src/vtol_control/: CMakeLists.txt  package.xml
src/vtol_control/config/: vtol_controllers.yaml
src/vtol_control/scripts/: mpc_node.py
src/vtol_control/src/: aerodynamics_node.cpp  hover_pid_node.cpp
src/vtol_description/: CMakeLists.txt  package.xml
src/vtol_description/launch/: display.launch.py
src/vtol_description/urdf/: vtol.urdf
src/vtol_estimation/: CMakeLists.txt  package.xml
src/vtol_estimation/src/: eskf_node.cpp
src/vtol_simulation/: CMakeLists.txt
src/vtol_simulation/launch/: gazebo.launch.py
