<?xml version="1.0"?>
<package format="3">
  <name>vtol_estimation</name>
  <version>0.1.0</version>
  <description>ESKF state estimation with simulated noisy sensors</description>
  <maintainer email="eng.naserddine2004@gmail.com">Ali Naserddine</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
